@@ -141,7 +141,7 @@ values. These are mapped to the closest color supported by the
 screen, either from one of the 256 colors in the FLTK 1.0.x
 colormap or a direct RGB value on TrueColor screens. You can
 generate 24-bit RGB color values using the <A
-HREF="functions.html#fl_rgb_color"><TT>fl_rgb_color()</TT>
+HREF="functions.html#fl_rgb_color"><TT>fl_rgb_color()</TT></A>
 function.
 
 <H4>void fl_color(Fl_Color)</H4>
@@ -770,7 +770,7 @@ for example.
 <H4>virtual void copy();<BR>
 virtual void copy(int w, int h);</H4>
 
-<P>The <TT>copy() method creates a copy of the image. The second form
+<P>The <TT>copy()</TT> method creates a copy of the image. The second form
 specifies the new size of the image - the image is resized using the
 nearest-neighbor algorithm.
 
