@@ -98,12 +98,12 @@ is now included with several Linux distributions.</P>
 	<LI>The FLUID program (which includes every widget) is
 	538k.</LI>
 
-	<LI>Written directly atop Xlib (or WIN32) for maximum
+	<LI>Written directly atop core libraries (Xlib, WIN32 or Carbon) for maximum
 	speed, and carefully optimized for code size and
 	performance.</LI>
 
-	<LI>Precise low-level compatability between the X11 and
-	WIN32 version - only about 10% of the code is
+	<LI>Precise low-level compatability between the X11,
+	WIN32 and MacOS version - only about 10% of the code is
 	different.</LI>
 
 	<LI>Interactive user interface builder program. Output is
@@ -113,7 +113,7 @@ is now included with several Linux distributions.</P>
 	is available.</LI>
 
 	<LI>Very small &amp; fast portable 2-D drawing library
-	to hide Xlib and  WIN32.</LI>
+	to hide Xlib, WIN32 or QuickDraw.</LI>
 
 	<LI>OpenGL/Mesa drawing area widget.</LI>
 
