@@ -11,7 +11,7 @@
 
 <P>This manual describes the Fast Light Tool Kit (&quot;FLTK&quot;)
 version 1.1.0, a  C++ Graphical User Interface
-(&quot;GUI&quot;) toolkit for UNIX and Microsoft  Windows.  Each
+(&quot;GUI&quot;) toolkit for UNIX, Microsoft Windows and MacOS.  Each
 of the chapters in this manual is designed as a tutorial  for
 using FLTK, while the appendices provide a convenient reference
 for  all FLTK widgets, functions, and operating system
@@ -88,6 +88,9 @@ interfaces.</P>
 	<DT>WIN32</DT>
 	<DD>The Microsoft Windows 32-bit Application Programmer's Interface.</DD>
 
+	<DT>MacOS</DT>
+	<DD>The Apple Macintosh OS 8.6 and later, including OS X.<DD>
+
 </DL>
 
 <H2>Copyrights and Trademarks</H2>
@@ -98,7 +101,8 @@ License, located in <A HREF="license.html#license">Appendix G</A>.</P>
 
 <P>UNIX is a registered trademark of the X Open Group, Inc.  Microsoft
 and Windows are registered trademarks of Microsoft Corporation. OpenGL
-is a registered trademark of Silicon Graphics, Inc. </P>
+is a registered trademark of Silicon Graphics, Inc. . Apple, Macintosh,
+MacOS and Mac OS X are registered trademarks of Apple Computer, Inc. .</P>
 
 </BODY>
 </HTML>
